Added settings folder to CMakeLists.txt install section.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,3 +64,8 @@ install(TARGETS client_node
 install(DIRECTORY launch/
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
 )
+
+install(DIRECTORY settings/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/settings
+  )
+
