--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,12 @@ find_package(catkin REQUIRED COMPONENTS
 find_package(QuanergyClient REQUIRED)
 find_package(PCL REQUIRED COMPONENTS common io)
 
+# Workaround required for due to bug in VTK6 for Ubuntu 16.04
+# See https://bugs.launchpad.net/ubuntu/+source/vtk6/+bug/1573234
+if (NOT "${PCL_LIBRARIES}" STREQUAL "")
+  list(REMOVE_ITEM PCL_LIBRARIES "vtkproj4")
+endif()
+
 ###################################
 ## catkin specific configuration ##
 ###################################
