--- a/package.xml
+++ b/package.xml
@@ -13,7 +13,8 @@
   <depend condition="$ROS_VERSION == 1">roscpp</depend>
   <depend condition="$ROS_VERSION == 2">rclcpp</depend>
   <depend>sensor_msgs</depend>
-  <depend>pcl_conversions</depend>
+  <depend condition="$ROS_VERSION == 1">pcl_ros</depend>
+  <depend condition="$ROS_VERSION == 2">pcl_conversions</depend>
   <depend>quanergy_client</depend>
 
   <export>
