--- a/package.xml
+++ b/package.xml
@@ -10,12 +10,15 @@
 
   <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
   <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
+
   <depend condition="$ROS_VERSION == 1">roscpp</depend>
   <depend condition="$ROS_VERSION == 2">rclcpp</depend>
   <depend>sensor_msgs</depend>
   <depend condition="$ROS_VERSION == 1">pcl_ros</depend>
   <depend condition="$ROS_VERSION == 2">pcl_conversions</depend>
   <depend>quanergy_client</depend>
+
+  <exec_depend condition="$ROS_VERSION == 2">ros2launch</exec_depend>
 
   <export>
     <build_type condition="$ROS_VERSION == 1">catkin</build_type>
